@@ -1,3 +1,8 @@
+import org.gradle.api.file.DuplicatesStrategy
+import org.gradle.api.tasks.Copy
+import java.io.File
+import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
+
 plugins {
     kotlin("jvm") version "2.0.21"
     application
@@ -25,6 +30,27 @@ javafx {
     modules = listOf("javafx.controls", "javafx.graphics")
 }
 
+sourceSets {
+    main {
+        java {
+
+            srcDirs("src/main/java")
+        }
+        kotlin {
+
+            srcDirs("src/main/kotlin")
+        }
+
+        resources {
+            srcDirs("src/main/resources")
+        }
+    }
+}
+
+tasks.named<Copy>("processResources") {
+    duplicatesStrategy = DuplicatesStrategy.INCLUDE
+}
+
 java {
     toolchain {
         languageVersion.set(JavaLanguageVersion.of(22))
@@ -32,8 +58,45 @@ java {
     }
 }
 
+tasks.named<JavaCompile>("compileJava") {
+    dependsOn(tasks.named("compileKotlin"))
+
+
+    val currentModuleName = "ScardIDE.main" // As defined in jlink
+    val compileKotlinTask = tasks.named<KotlinCompile>("compileKotlin").get()
+
+
+    destinationDirectory.set(compileKotlinTask.destinationDirectory)
+
+
+    val dependencyModulePath = project.configurations.runtimeClasspath.get().asPath
+
+    val javaSrcDir = sourceSets.main.get().java.srcDirs.first().absolutePath
+    val kotlinOutputDir = compileKotlinTask.destinationDirectory.get().asFile
+
+    options.compilerArgs = mutableListOf(
+        "--module-path", dependencyModulePath,
+
+        "--patch-module", "$currentModuleName=$javaSrcDir${File.pathSeparator}${kotlinOutputDir.absolutePath}"
+    )
+
+    classpath = project.configurations.compileClasspath.get()
+}
+
+
 application {
     mainClass.set("dev.alepando.MainKt")
+    mainModule.set("ScardIDE.main") // Added this line
+}
+
+tasks.named<JavaExec>("run") {
+    val modulePathString = sourceSets.main.get().runtimeClasspath.files.joinToString(File.pathSeparator) { it.absolutePath }
+
+    jvmArgs = listOf(
+        "--module-path", modulePathString,
+        "--add-modules", "ALL-MODULE-PATH",
+        "--add-opens", "ScardIDE.main/dev.alepando=ALL-UNNAMED"
+    )
 }
 
 jlink {
@@ -54,11 +117,11 @@ jlink {
 
     jpackage {
         imageName = "ScardIDE"
-        installerType = "exe"
+        installerType = "msi"
         appVersion = "1.0.0"
         vendor = "Alepando"
         installerName = "ScardIDE Installer"
-        installerOptions.addAll(listOf("--win-menu", "--win-shortcut"))
+
     }
 }
 
